Fixed wrapped table on landscaped phone

--- a/public/admin_resources/css/themes/custom.css
+++ b/public/admin_resources/css/themes/custom.css
@@ -1247,3 +1247,8 @@ table thead th {
 .import-leads-button{
     min-width: 90%;
 }
+@media (orientation: landscape) {
+    .table-responsive>.table>tbody>tr>td{
+        white-space: nowrap;
+    }
+}
